--- a/config/database.yml
+++ b/config/database.yml
@@ -24,8 +24,8 @@ default: &default
 development:
   <<: *default
   database: beergem_development
-  user: yoda14
-  password: Asecret1
+#  user: yoda14
+#  password: Asecret1
 
   # The specified database role being used to connect to postgres.
   # To create additional roles in postgres see `$ createuser --help`.
@@ -60,8 +60,8 @@ development:
 test:
   <<: *default
   database: beergem_test
-  user: yoda14
-  password: Asecret1
+#  user: yoda14
+#  password: Asecret1
 
 # As with config/secrets.yml, you never want to store sensitive information,
 # like your database password, in your source code. If your source code is
